<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_name">Movies Funny</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="login" translatable="false">Login</string>
    <string name="title_top_trending" translatable="false">Comming soon</string>
    <string name="title_user_fragment" translatable="false">Account</string>
    <string name="history_deal" translatable="false">Video Watched</string>
    <string name="no_adv" translatable="false">Loved History</string>
    <string name="free_data" translatable="false">Free Data</string>
    <string name="feed_back" translatable="false">Feedback</string>
    <string name="about_our">About us</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="title_cart_fragment" translatable="false">Cart</string>
    <string name="facebook_app_id">344120937612160</string>
    <string name="fb_login_protocol_scheme">fb344120937612160</string>
    <string name="payment">Payment</string>
    <string name="completed">Completed</string>
    <string name="revenue">The money was payment(%s - %s)</string>

</resources>